fixed collecting book to list bug in BookController